feat: add update in band
