# internal/dto/dto.go
@@ -4,3 +4,8 @@ type CreateBandParams struct {
 	Name string `json:"name"`
 	Year uint   `json:"year"`
 }
+
+type UpdateBandParams struct {
+	Name string `json:"name"`
+	Year uint   `json:"year"`
+}
